metadata-triggers/main/default/objects/Trigger_Registration__mdt/Trigger_Registration__mdt.object-meta.xml
<CustomObject>
    <description>As part of the &quot;Metadata Triggers&quot; project, this custom metadata object registers various trigger handlers against objects that then a Trigger Service retrieves and processes based on the trigger context and priority ordering.</description>
    <label>Trigger Registration</label>
    <pluralLabel>Trigger Registrations</pluralLabel>
</CustomObject>