metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>This field defines the trigger context in which the handler class should run. For example, if the specified handler class should run in the after insert context, this would be AFTER_INSERT. Without a specified context, the trigger cannot run and so is required.</description>
    <label>Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <default>true</default>
                <label>BEFORE_INSERT</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>