metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this trigger handler does.</description>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>