metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/ErrorMode__c.field-meta.xml
<CustomField>
    <fullName>ErrorMode__c</fullName>
    <description>Controls how exceptions from the handler should be handled. FAIL_FAST means that if this handler throws, subsequent handlers don&apos;t run. LOG_AND_CONTINUE means that if this handler throws subsequent handlers will still run.</description>
    <label>Error Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAIL_FAST</fullName>
                <default>true</default>
                <label>FAIL_FAST</label>
            </value>
            <value>
                <fullName>LOG_AND_CONTINUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>