metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <description>The order in which this handler should execute, relative to other triggers registered for the same object and context.</description>
    <label>Execution Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>