metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/HandlerClass__c.field-meta.xml
<CustomField>
    <fullName>HandlerClass__c</fullName>
    <description>The fully-qualified Apex class name (e.g. AccountTerritoryHandler). Include namespaces if required.</description>
    <label>Handler Class</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>