metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the trigger handler should run. Inactive handlers are skipped. Default is true.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>