metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>The name of the project, repository, or solution that this handler registration belongs to. Useful for identifying the source of registrations and tracing back. Not required.</description>
    <label>Project</label>
    <length>150</length>
    <type>Text</type>
</CustomField>