metadata-triggers/main/default/objects/Trigger_Registration__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Name of the SObject the trigger relates to, e.g. Account, Opportunity. Case-sensitive to match Schema.SObjectType.getDescribe().getName(). Custom objects belonging to a namespace should include the namespace. A trigger cannot run without knowing which object it relates to.</description>
    <label>SObject</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>