metadata-triggers/main/default/objects/Trigger_Registration__mdt/listViews/All_Triggers.listView-meta.xml
<ListView>
    <fullName>All_Triggers</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject__c</columns>
    <columns>Context__c</columns>
    <columns>HandlerClass__c</columns>
    <columns>ExecutionOrder__c</columns>
    <columns>IsActive__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All Triggers</label>
    <language>en_US</language>
</ListView>